@@ -1,13 +1,14 @@
 package ctests;
 
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import crml.compiler.omc.OMCUtil.CompileStage;
+import crml.compiler.util.CompilerRoot;
 import crml.compiler.omc.CompileSettings;
 import crml.compiler.omc.ModelicaSimulationException;
 
@@ -18,18 +19,18 @@ public class UseCaseTests {
     @BeforeAll
     public static void setupTestSuite() {
 		cs = new CompileSettings(
-                ParameterizedSuite.RESOURCES.resolve("..").resolve("..").resolve("..").resolve("..").resolve("crml_tutorial"),
+                CompilerRoot.RESOURCES.resolve("..").resolve("..").resolve("..").resolve("..").resolve("crml_tutorial"),
                 null,
                 null);
         cs.processBuilder = new ProcessBuilder();
-        cs.outputFolder = ParameterizedSuite.OUT.resolve("use_cases");
+        cs.outputFolder = CompilerRoot.OUT.resolve("use_cases");
 	}
 
     @DisplayName("Traffic lights use-case test")
 	@Test
 	void testTraficLight () throws InterruptedException, IOException, ModelicaSimulationException{
 		String filePath = "traffic_light/";
-		Util.runTest(Path.of(filePath), cs, CompileStage.TRANSLATE);
+		Util.runTest(Paths.get(filePath), cs, CompileStage.TRANSLATE);
 	}
 
 	/** @DisplayName("Pumping System use-case test")
